# operation-logger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: applications.rs  lib.rs  local_participant_config.rs  log_directory.rs  main.rs  session_metadata.rs
src/capture/: config.rs  encoder.rs  frame_source.rs  layout.rs  metadata_writer.rs  mod.rs  scale.rs  session.rs  timing.rs  wgc.rs
src/gui/: app_model.rs  mod.rs  presenter.rs
src/logger/: mod.rs  session.rs
src/logger/common/: csv.rs  mod.rs  time.rs
src/logger/controller/: csv_writer.rs  device_registry.rs  hid_mapper.rs  mod.rs  model.rs  raw_input.rs
src/logger/keyboard/: csv_writer.rs  foreground.rs  hook.rs  mod.rs  model.rs
src/logger/mouse/: csv_writer.rs  hook.rs  mod.rs  model.rs  target_resolver.rs
src/platform/: mod.rs  windows.rs
tests/: app_list.rs  input_logging_api.rs
ui/: main_window.slint
