[package]
name = "operation-logger"
version = "0.1.0"
edition = "2024"
description = "A Windows input logging tool for recording keyboard, mouse, and controller operations for a selected application."
readme = "README.md"
repository = "https://github.com/SuzukiKatsuma/operation-logger"
homepage = "https://github.com/SuzukiKatsuma/operation-logger"
documentation = "https://github.com/SuzukiKatsuma/operation-logger"
keywords = ["windows", "input", "logging"]
publish = false

[profile.release]
lto = "thin"
codegen-units = 1

[[bin]]
name = "operation-logger-cli"
path = "src/main.rs"

[[bin]]
name = "operation-logger-gui"
path = "src/bin/gui.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-software"] }
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
] }

[build-dependencies]
slint-build = "1"
